# lumieres-lausanne-2025

./: .dockerignore  .env.template  .gitignore  .stylelintrc.json  AGENTS.md  DEAD-CODE-ANALYSIS-PHASE1.md  DEAD-CODE-REMOVAL-PHASE1b-REPORT.md  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.base.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  eslint.config.js  mkdocs.yml  package.json  pyproject.toml  vite.config.js
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/tmux-neovim/: devcontainer.json  docker-compose.dev.yml
.devcontainer/vscode/: devcontainer.json  docker-compose.dev.yml
.github/agents/: 00-EXECUTION-SUMMARY.md  IMPLEMENTATION-CHECKLIST.md  MASTER-PLAN.md  PHASE-1-DEAD-CODE-ANALYSIS.md  PHASE-2-REFACTOR-NAV-BAR.md  PHASE-3-MODE-CONDITIONAL-LOGIC.md  PHASE-4-UPDATE-DATE-FIELDS.md  PHASE-5-VISUAL-TESTING.md  PLAYWRIGHT-TESTS-SETUP.md  PRE-PHASE-4-DATE-AUDIT.md  QUICK-START.md  README.md
.github/chatmodes/: Learning.chatmode.md  Plan.chatmode.md  Thinking.chatmode.md
.github/chats/: biblio-edit.chat.md  django-learning.md
.github/instructions/: commons.instructions.md  docs.instructions.md  migration-full.instructions.md  migration.instructions.md
.github/prompts/: export-chat.prompt.md  format-agent.prompt.md  format-ask.prompt.md  format-edit.prompt.md  format.prompt.md  list-app-models.prompt.md  list-legacy-models.prompt.md  review-models.prompt.md  rewrite-models.prompt.md  unit-tests.prompt.md
.github/workflows/: codeql.yml  docker-prod.yml  docker-stage.yml  docker.yml
app/: manage.py
app/ckeditor/: __init__.py  fields.py  tests.py  urls.py  views.py  widgets.py
app/ckeditor/templates/: browse.html
app/fiches/: __init__.py  admin.py  apps.py  base_forms.py  constants.py  context_processors.py  fields.py  forms.py  place_tag.py  reference_forms.py  search_indexes.py  signals.py  urls.py  urls_news.py  urls_project.py  urls_publication.py  urls_search.py  urls_workspace.py  utils.py  utils_coin.py  views.py  widgets.py
app/fiches/dev/: __init__.py
app/fiches/fixtures/: Keywords.json  UserGroup.json  auth.Group.json  static_data.json
app/fiches/forms/: __init__.py  base.py  biblio.py  collections.py  notes.py  place.py  projects.py  search.py  transcription.py
app/fiches/management/: __init__.py
app/fiches/migrations/: 0001_initial.py  0002_add_transcription_date_fields.py  0003_populate_transcription_dates.py  0004_transcription_modified_by_transcription_published_by_and_more.py  0005_convert_tables_to_innodb.py  0006_drop_legacy_contenttype_name.py  0007_placecategory.py  0008_referencesite.py  0009_placerecord.py  0010_placevariant.py  0011_placereferencesite.py  0012_noteplace.py  0013_reference_site_applicability_flags.py  0014_biography_reference_site.py  0015_place_fields_to_textfield.py  0016_biblio_place_tagging.py  0017_biblio_subj_place.py  0018_place_verbose_name.py  0019_document_nature.py
app/fiches/models/: __init__.py  contributiontype.py
app/fiches/sql/: biblio.sql  biography.sql
app/fiches/templates/: 404.html  500.html  base2.html  base_framed2.html  base_modern.html  base_vite.html  maintenance.html  paginator.html  popup_base.html  ribbon_dev.html
app/fiches/templatetags/: collector.py  fiches_extras.py  paginator.py  utils.py  vite_tags.py
app/fiches/tests/: conftest.py  test_admin_news_image.py  (+10 more)
app/lumieres_project/: asgi.py  settings.py  settings_ckeditor_configs.py  settings_test.py  urls.py  wsgi.py
app/pagination/: middleware.py  tests.py
app/static/: robots.txt
app/utils/: __init__.py  aggregates.py  coins.py  fields.py  utils_coins.py
descr/: backlog.md  deployment.md  prod-deploy-runbook.md  roles.md
docker/: Dockerfile.app  docker-compose.dev.yml  docker-compose.devcontainer.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.v2024.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  NAVIGATION.md  README.md  ckeditor_page_number_plugin.md  copyright.md  db-maintenance-innodb-url-cleanup.md  django-vite-integration.md  facsimile-usage-guide.md  facsimile-viewer-verification.md  frontend-build-system.md  iiif-facsimile-migration.md  index.md  migration-transcription-dates.md  openseadragon-integration.md  pagination-patterns.md
docs/en/: facsimile-admin-guide.md  facsimile-user-guide.md
docs/fr/: facsimile-guide-admin.md  facsimile-guide-utilisateur.md
make/: clean.mk  db.mk  dev.mk  devcontainer.mk  django.mk  docker-compose.mk  docs.mk  frontend.mk  helpers.mk  lint.mk  migration.mk  playwright.mk  solr.mk  tests.mk  v2024.mk
patch/: app_fiches_forms.py.patch
settings/: nginx.conf
settings/db/: mysql-custom.cnf
tests/: __init__.py  test_sample.py
tests/backend/: conftest.py  test_activity_log.py  test_admin_news_image.py  test_admin_place_record.py  test_biblio_display.py  test_biblio_document_nature.py  test_biblio_edit.py  test_biblio_place_tag.py  test_biblio_subject_person.py  test_biblio_subject_place.py  test_biography_model.py  test_biography_place_tag.py  test_biography_reference_links_form.py  test_biography_reference_site.py  test_ckeditor_views.py  test_collector_tag.py  test_config.py  test_dead_code_removal.py  test_dict_field.py  test_document_models.py  test_error_views.py  test_fiches_extras.py  test_fiches_utils.py  test_last_transcriptions_publications.py  test_lint_regressions.py  test_list_places.py  test_note_place.py  test_object_collection.py  test_pagination_tags.py  test_paginator_fiches.py  test_patrinum_facsimile_sources.py  test_person_model.py  test_place_category.py  test_place_forms.py  test_place_listings.py  test_place_record.py  test_place_reference_site.py  test_place_search.py  test_place_variant.py  test_place_views.py  (+8 more)
tests/playwright/: README.md  __init__.py  conftest.py  facsimile-viewer.spec.ts  test_facsimile_viewer.py
tools/: analyze_pagination.py  clean_urls.py  convert_line_endings.py  media_audit.py  sql_migrations.py  wait-for-it.sh
(+280 files in other folders)
