[project]
name = "lumieres-lausanne"
version = "0.1.0"
description = "A Django web project allowing researchers to publish their discoveries about writings from the Enlightenment period in Lausanne and the canton of Vaud."
requires-python = ">=3.13,<3.14"
authors = [
  { name = "Julien Ganivet", email = "julien.ganivet@unil.ch" },
  { name = "Xavier Beheydt", email = "xavier.beheydt@gmail.com" },
]
dependencies = [
  "django>=5.2.13,<6.0",
  "django-ckeditor>=6.7.2",
  "django-haystack>=3.0",
  "django-js-asset>=2.2.0",
  "gunicorn>=23.0,<24.0",
  "mysqlclient>=2.2.7",
  "pillow>=11.0",
  "pysolr>=3.9.0",
  "sorl-thumbnail>=12.7.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-django>=4.12.0",
  "ruff>=0.15.15",
  "ty>=0.0.40",
]
docs = ["mkdocs>=1.6.1"]

[tool.uv]
package = false

# Ruff replaces black (formatting) + isort (import sorting) + flake8 and its
# plugins (linting). Run with `make lint` / `make format` (see make/lint.mk).
[tool.ruff]
line-length = 119
target-version = "py313"
extend-exclude = [
  "app/media",
  "app/static",
  "app/uploads",
  "app/staticfiles",
]

[tool.ruff.lint]
# Faithful port of the previous flake8 stack:
#   E/W  pycodestyle              F   pyflakes
#   I    isort                    B   flake8-bugbear
#   C4   flake8-comprehensions    DJ  flake8-django
#   D    pydocstyle (docstrings)  N   pep8-naming
select = ["E", "W", "F", "I", "B", "C4", "DJ", "D", "N"]
ignore = [
  # E203: whitespace before ':' — owned by the formatter (was ignored under
  # flake8 too). W503 has no ruff equivalent; the formatter sets break style.
  "E203",
]

[tool.ruff.lint.per-file-ignores]
# Django settings legitimately "import to re-export" (the imported name becomes
# a setting) and use late/conditional imports that depend on earlier
# assignments, so F401 (unused) and E402 (import-not-at-top) are expected here.
"app/lumieres_project/settings*.py" = ["F401", "E402"]

[tool.ruff.lint.isort]
known-third-party = ["django", "requests"]

[tool.ruff.lint.pydocstyle]
# Mirrors flake8-docstrings' default and resolves the mutually-exclusive
# D203/D211 and D212/D213 pairs.
convention = "pep257"

# Ty replaces mypy for static type checking. Run with `make typecheck`.
[tool.ty.environment]
python-version = "3.13"
# Source lives under app/ (pytest adds it to pythonpath); declare it as a
# first-party root so imports like `fiches` / `lumieres_project` resolve.
root = ["./app"]

[tool.ty.src]
include = ["app"]
exclude = [
  "app/media",
  "app/static",
  "app/uploads",
  "app/staticfiles",
]

[tool.coverage.run]
# Measure the project's Python packages by name so coverage works both on the
# host (code under app/, on sys.path via pytest pythonpath) and in the
# container (code at /app). Recipes pass a bare --cov which uses this source.
source_pkgs = ["ckeditor", "fiches", "lumieres_project", "pagination", "utils"]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/staticfiles/*",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
# --no-migrations: build the schema from the models (syncdb-style). The legacy
#   fiches migrations are not replayable from scratch (faked 0001-0004), so this
#   is the only reliable way to create the test DB.
# --ds: pin the test settings even when DJANGO_SETTINGS_MODULE is set to the
#   runtime settings in the environment (e.g. via compose env_file).
# --import-mode=importlib: avoid sys.path insertion / basename collisions.
addopts = "-ra -q --no-migrations --ds=lumieres_project.settings_test --import-mode=importlib"
pythonpath = ["app"]
DJANGO_SETTINGS_MODULE = "lumieres_project.settings_test"
python_files = ["test_*.py", "*_tests.py"]
testpaths = ["tests/backend"]
norecursedirs = ["media", "static", "uploads", "staticfiles", "__pycache__"]
